# DataPost

./: pd_from_pg.py  pd_to_pg.py  pyproject.toml  sqltable.txt
API/: API_Forecast.ipynb
eatherquake/: eatherquake.ipynb
jupyter_notebooks/: Rocket.ipynb
